@@ -171,6 +171,8 @@ lighter making things easier to read.
 * (bug 6844) Use <ins> and <del> tags to emphase the differences
 * (bug 6684) Fix improper javascript array iteration
 * (bug 4347) use MailAddress object for reply-to
+* Add AlphabeticPager abstract class
+* Use faster AlphabeticPager for Special:Categories
 
 
 == Languages updated ==
